+ add ThrowIfNull to editorConig + define CLSCompliant(false) for AutoVersionsDB.CLI

--- a/src/AutoVersionsDB/.editorconfig
+++ b/src/AutoVersionsDB/.editorconfig
@@ -8,3 +8,5 @@ dotnet_diagnostic.CA1031.severity = none
 
 # IDE0063: Use simple 'using' statement
 csharp_prefer_simple_using_statement = true:none
+
+dotnet_code_quality.CA1062.null_check_validation_methods = ThrowIfNull
