--- a/src/AutoVersionsDB/.editorconfig
+++ b/src/AutoVersionsDB/.editorconfig
@@ -10,3 +10,9 @@ dotnet_diagnostic.CA1031.severity = none
 csharp_prefer_simple_using_statement = true:none
 
 dotnet_code_quality.CA1062.null_check_validation_methods = ThrowIfNull
+
+# CA2201: Do not raise reserved exception types
+dotnet_diagnostic.CA2201.severity = none
+
+# CA1045: Do not pass types by reference
+dotnet_diagnostic.CA1045.severity = none
