--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -20,10 +20,14 @@ jobs:
       uses: gittools/actions/gitversion/setup@v0.9.6
       with:
         versionSpec: '5.x'
-    - name: Setup .NET Core
+    - name: Setup .NET Core 3.1
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    - name: Setup .NET 5
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5  
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.6
