--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -19,13 +19,13 @@ jobs:
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v0.9.6
       with:
-        versionSpec: '5.5.1'
+        versionSpec: '5.6'
     - name: Setup .NET Core 3.1
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-   # - name: Setup .NET 5
-   #   uses: actions/setup-dotnet@v1
+    - name: Setup .NET 5
+      uses: actions/setup-dotnet@v1
    #   with:
    #     dotnet-version: 5.0.0
     - name: Use GitVersion
