--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -26,8 +26,8 @@ jobs:
         dotnet-version: 3.1.101
     - name: Setup .NET 5
       uses: actions/setup-dotnet@v1
-   #   with:
-   #     dotnet-version: 5.0.0
+      with:
+        dotnet-version: 5.0.101
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
       uses: gittools/actions/gitversion/execute@v0.9.6
