--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -67,12 +67,12 @@ jobs:
 #      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
     - name: Build AutoVersionsDB.Core
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj -c debug
-    - name: Install dependencies for AutoVersionsDB.WinApp
-      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj    
+#    - name: Install dependencies for AutoVersionsDB.WinApp
+#      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj    
     - name: Build AutoVersionsDB.WinApp
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.WinApp\AutoVersionsDB.WinApp.csproj -c debug
-    - name: Install dependencies for AutoVersionsDB.ConsoleApp
-      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.ConsoleApp\AutoVersionsDB.ConsoleApp.csproj    
+#    - name: Install dependencies for AutoVersionsDB.ConsoleApp
+#      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.ConsoleApp\AutoVersionsDB.ConsoleApp.csproj    
     - name: Build AutoVersionsDB.ConsoleApp
       run: dotnet build src\AutoVersionsDB\AutoVersionsDB.ConsoleApp\AutoVersionsDB.ConsoleApp.csproj -c debug
     - name: Run Integration Tests
