--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -16,10 +16,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-  #  - name: Install GitVersion
-  #    uses: gittools/actions/gitversion/setup@v0.9.6
-  #    with:
-  #      versionSpec: '5.6'
     - name: Setup .NET Core 3.1
       uses: actions/setup-dotnet@v1
       with:
@@ -29,10 +25,10 @@ jobs:
       with:
         dotnet-version: 5.0.101
 
-    - run: dotnet tool install -g GitVersion.Tool
+#    - run: dotnet tool install -g GitVersion.Tool
       
-    - name: GitVersion
-      run: dotnet gitversion /l console /output buildserver
+#    - name: GitVersion
+#      run: dotnet gitversion /l console /output buildserver
       
 #    - name: Install dependencies for AutoVersionsDB.Core
 #      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
