--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -24,11 +24,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.101
-
-#    - run: dotnet tool install -g GitVersion.Tool
       
-#    - name: GitVersion
-#      run: dotnet gitversion /l console /output buildserver
+    - name: install GitVersion
+      run: dotnet tool install -g GitVersion.Tool
+    - name: Use GitVersion
+      run: dotnet gitversion /l console /output buildserver
       
 #    - name: Install dependencies for AutoVersionsDB.Core
 #      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
