--- a/src/AutoVersionsDB/AutoVersionsDB.DBFilesForTests/AutoVersionsDB.DBFilesForTests.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DBFilesForTests/AutoVersionsDB.DBFilesForTests.csproj
@@ -17,6 +17,7 @@
     <None Remove="SqlServer\Scripts\Delivery_ChangedHistoryFiles_Incremental\AutoVersionsDB.Tests_ChangedHistoryFiles_Incremental.avdb" />
     <None Remove="SqlServer\Scripts\Delivery_ChangedHistoryFiles_Repeatable\Delivery_ChangedHistoryFiles_Repeatable.avdb" />
     <None Remove="SqlServer\Scripts\Delivery_MissingFile\AutoVersionsDB.Tests_MissingFile.avdb" />
+    <None Remove="SqlServer\Scripts\Delivery_NoScriptFiles\AutoVersionsDB.Tests_NoScriptFiles.avdb" />
     <None Remove="SqlServer\Scripts\Delivery_ScriptError\AutoVersionsDB.Tests_ScriptError.avdb" />
     <None Remove="SqlServer\Scripts\Delivery_WithDevDummyDataFiles\AutoVersionsDB.Tests.avdb" />
     <None Remove="SqlServer\Scripts\DevScripts\DevDummyData\dddScript_DataForInvoiceTable1.sql" />
@@ -100,6 +101,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SqlServer\Scripts\Delivery_MissingFile\AutoVersionsDB.Tests_MissingFile.avdb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServer\Scripts\Delivery_NoScriptFiles\AutoVersionsDB.Tests_NoScriptFiles.avdb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="SqlServer\Scripts\Delivery_ScriptError\AutoVersionsDB.Tests_ScriptError.avdb">
@@ -240,6 +244,12 @@
     <Content Include="SqlServer\Scripts\DevScripts_ScriptError\Repeatable\rptScript_DataForLookupTable2.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SqlServer\Scripts\DevScripts_NoScriptFiles\DevDummyData\" />
+    <Folder Include="SqlServer\Scripts\DevScripts_NoScriptFiles\Incremental\" />
+    <Folder Include="SqlServer\Scripts\DevScripts_NoScriptFiles\Repeatable\" />
   </ItemGroup>
 
 </Project>
