--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -25,10 +25,10 @@ jobs:
       with:
         dotnet-version: 5.0.101
       
-    - name: install GitVersion
-      run: dotnet tool install -g GitVersion.Tool
-    - name: Use GitVersion
-      run: dotnet gitversion /l console /output buildserver
+#    - name: install GitVersion
+#      run: dotnet tool install -g GitVersion.Tool
+#    - name: Use GitVersion
+#      run: dotnet gitversion /l console /output buildserver
       
 #    - name: Install dependencies for AutoVersionsDB.Core
 #      run: dotnet restore src\AutoVersionsDB\AutoVersionsDB.Core\AutoVersionsDB.Core.csproj
