--- a/.github/workflows/developPush.yml
+++ b/.github/workflows/developPush.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         dotnet-version: 5.0.101
       
-#    - name: install GitVersion
-#      run: dotnet tool install -g GitVersion.Tool
+    - name: install GitVersion
+      run: dotnet tool install -g GitVersion.Tool
 #    - name: Use GitVersion
 #      run: dotnet gitversion /l console /output buildserver
       
