--- a/src/AutoVersionsDB/AutoVersionsDB.NotificationableEngine/AutoVersionsDB.NotificationableEngine.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.NotificationableEngine/AutoVersionsDB.NotificationableEngine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <LangVersion>8.0</LangVersion>
   </PropertyGroup>
