--- a/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/packages.config
+++ b/src/AutoVersionsDB/AutoVersionsDB.ConsoleApp.Setup/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitVersionTask" version="5.5.1" developmentDependency="true" />
+  <package id="GitVersion.MsBuild" version="5.6.4" developmentDependency="true" />
 </packages>
