--- a/src/AutoVersionsDB/AutoVersionsDB.DB.SqlServer/AutoVersionsDB.DB.SqlServer.csproj
+++ b/src/AutoVersionsDB/AutoVersionsDB.DB.SqlServer/AutoVersionsDB.DB.SqlServer.csproj
@@ -51,11 +51,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersionTask" Version="5.5.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.1">
+    <PackageReference Include="GitVersion.MsBuild" Version="5.6.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
